# xentara-template-uplink-full

./: CMakeLists.txt  README.md
src/: Attributes.cpp  Attributes.hpp  CustomError.cpp  CustomError.hpp  Events.cpp  Events.hpp  Plugin.cpp  Plugin.hpp  ServiceProvider.cpp  ServiceProvider.hpp  Skill.cpp  Skill.hpp  Tasks.cpp  Tasks.hpp  TemplateClient.cpp  TemplateClient.hpp  TemplateRecord.cpp  TemplateRecord.hpp  TemplateTransaction.cpp  TemplateTransaction.hpp
